# django-accounts

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg
accounts/: README.md  backends.py  forms.py  models.py  serializers.py  urls_api_v1.py  urls_auth.py  urls_auth_api.py  views.py  views_api.py
accounts_pkg/: .env  api_urls.py  settings-multi-auth.py  settings-phone-auth.py  settings.py  urls.py
deploy/: README.md  setup.cfg
deploy/accounts/: README.md  backends.py  forms.py  serializers.py  urls.py  urls_api_v1.py  urls_auth_api.py  urls_profile.py  urls_profile_api.py  utils.py  verify_phone.py  views.py  views_api.py
deploy/accounts/services/: twilio.py
deploy/accounts/templates/accounts/: confirm_email_template.html  email_verification_complete.html  login.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  phone_verification_complete.html  register.html  update_email_form.html  update_phone_number_form.html  update_user_data_form.html  update_user_password_form.html
deploy/accounts/templates/accounts/partials/: login-tabs.html  login_with_email.html  login_with_phone.html
deploy/accounts/templates/accounts/partials/fields/: birthdate.html  gender.html  one-time-code.html  password.html  password1.html  phone.html
deploy/accounts/tests/: apps.py  models.py  test_backends.py  test_forms.py  test_serializers.py  test_tokens.py  test_urls.py  test_verify_phone.py  test_view_api.py  test_views.py
deploy/dj_accounts.egg-info/: PKG-INFO  SOURCES.txt
(+103 files in other folders)
