[metadata]
name = dj-accounts
version=1.0.0
author=fritill
author_email=mahmoud.nasser@fritill.com
description=this application is for handling all auth operations
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/fritill-team/django-accounts
license=MIT
platform = any
keywords=django translation custom
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages = find:
